--- a/templates/Radzen.Blazor.Server.IdMan/Shared/NavMenu.razor
+++ b/templates/Radzen.Blazor.Server.IdMan/Shared/NavMenu.razor
@@ -1,35 +1,21 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">Radzen.Blazor.Server.IdMan</a>
+    <a class="navbar-brand" href="">IdentityManager</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
 </div>
 
 <div class="@NavMenuCssClass" @onclick="ToggleNavMenu">
-    <ul class="nav flex-column">
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="oi oi-home" aria-hidden="true"></span> Home
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
-            </NavLink>
-        </li>
+    <RadzenPanelMenu Style="width:250px">
+        <RadzenPanelMenuItem Text="Home" Path="/" Icon="home"></RadzenPanelMenuItem>
+        <RadzenPanelMenuItem Text="Counter" Path="counter" Icon="home"></RadzenPanelMenuItem>
+        <RadzenPanelMenuItem Text="Fetch data" Path="fetchdata" Icon="home"></RadzenPanelMenuItem>
+            <RadzenPanelMenuItem Text="Identity Manager" Icon="account_box">
+                <RadzenPanelMenuItem Text="User List" Path="/identitymanager" Icon="account_circle"></RadzenPanelMenuItem>
+                <RadzenPanelMenuItem Text="Roles List" Path="/identitymanager/rolesmanager" Icon="grid_on"></RadzenPanelMenuItem>
+            </RadzenPanelMenuItem>
+    </RadzenPanelMenu>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="identitymanager">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Identity Manager
-            </NavLink>
-        </li>
-
-    </ul>
 </div>
 
 @code {
