--- a/templates/Radzen.Blazor.Server.IdMan/Pages/IdentityManager/RolesManager.razor
+++ b/templates/Radzen.Blazor.Server.IdMan/Pages/IdentityManager/RolesManager.razor
@@ -95,7 +95,7 @@ else
                     Style = "position: absolute; left: -1000px;", 
                     Severity = NotificationSeverity.Error, 
                     Summary = "Failed", 
-                    Detail = $"Unable to create new user!", 
+                    Detail = $"Unable to create new role!", 
                     Duration = NotificationTime };
                     ShowNotification(message);
             }
